--- a/backend/.vscode/settings.json
+++ b/backend/.vscode/settings.json
@@ -4,7 +4,7 @@
     "activityBar.background": "#ecb0bc",
     "activityBar.foreground": "#15202b",
     "activityBar.inactiveForeground": "#15202b99",
-    "activityBarBadge.background": "#32801f",
+    "activityBarBadge.background": "#801f1f",
     "activityBarBadge.foreground": "#e7e7e7",
     "commandCenter.border": "#15202b99",
     "sash.hoverBorder": "#ecb0bc",
